# Trading-Intelligence-Agent-System

./: .gitignore  CLEANUP_SUMMARY.md  Dockerfile  README.md  RUN_STATUS.md  basic_demo.py  bootstrap.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_simple_demo.py  run_tias.py
.github/workflows/: ci.yml
docs/: AGENTS.md  MONITORING_IMPROVEMENTS.md  SPRINT_STATUS.md  SYSTEM_STATUS.md
k8s/: signal-monitor.yaml
monitoring/: Dockerfile.monitoring  alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: check_data.py  collect_training_data.py  deploy_monitoring.sh  deploy_production.sh  dump_signals.py  monitor_latency.py  monitor_signals_enhanced.py  run_mini_backtest.py  verify_system.py
src/: __init__.py  config.py
src/agents/: __init__.py  base_agent.py  execution.py  fundamental_analysis.py  market_intelligence.py  news_intelligence.py  orchestrator.py  risk_management.py  technical_analysis.py
src/api/: __init__.py  trading_api.py
src/backtesting/: __init__.py  backtest_engine.py  data_loader.py
src/dashboard/: app.py  streamlit_dashboard.py
src/execution/: __init__.py  execution_agent.py
src/features/: feature_builder.py
src/ingest/: news_fetcher.py
src/model/: train.py
src/nlp/: sentiment.py
src/realtime/: orchestrator.py
src/risk_management/: __init__.py  risk_manager.py
tests/: test_risk_management.py
